--- a/_posts/2020-06-17-terms.md
+++ b/_posts/2020-06-17-terms.md
@@ -3,7 +3,7 @@ layout: post
 title: Terms
 date: 2020-06-17 17:54 -0500
 category: personal
-published: false
+published: true
 ---
 
 # Financial and Trading Context
