Update for dbanh blog

--- a/_posts/2020-06-17-terms.md
+++ b/_posts/2020-06-17-terms.md
@@ -19,3 +19,7 @@ published: true
 - Derivatives. Their value comes from the fluctuations of the values of underlying assets. Therefore, they are used by organization to mitigate risk or speculate on price changes. [Derivatives](https://www.investopedia.com/terms/d/derivative.asp)
 
 - Cross rate: It is a exchange rate between 2 currencies, one of them are not dosmestice currency. In practices, a cross rate is usually a currency pair that doesn't involve the U.S. dollar. [Cross rate](https://www.investopedia.com/terms/c/crossrate.asp)
+
+
+collect different type of data from different exchanges, different type of finaicial data
+Once collect all data we push everything in kafka, messageing bus for backend pipeline
